--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
 <head>
 	<title>lewds</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" /> 
@@ -11,7 +9,7 @@
 		}
 	</style>
 </head>
-<body>
+
 	
 		<img src="static/lewds/(m=eaAaGwObaaaa)(mh=Ao4RaD98x2S4AYaj)15.jpg" alt="lewd-image" class="img-style" />
 	
@@ -4997,6 +4995,13 @@
 	
 		<img src="static/lewds/__lucy_heartfilia_fairy_tail_drawn_by_uruka_18__e4e538637659e7664e5a5ff4bde8fc2b.png" alt="lewd-image" class="img-style" />
 	
-
-</body>
-</html>
+		<img src="static/lewds/912f49ead680fe1c5f8091daa9d308bf.png" alt="lewd-image" class="img-style" />
+	
+		<img src="static/lewds/f4a9f25f7497a0f1a44f3953d6c7d771.jpeg" alt="lewd-image" class="img-style" />
+	
+		<img src="static/lewds/jy4fuiwh8e451.jpg" alt="lewd-image" class="img-style" />
+	
+		<img src="static/lewds/286f24a6b0c02f87c25d20942ff8f21a.jpeg" alt="lewd-image" class="img-style" />
+	
+		<img src="static/lewds/ddd1d16227fd8a2445113656122a408c.png" alt="lewd-image" class="img-style" />
+	
